# spice-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  new_version.yml  publish.yml  rust.yml
examples/: spice_flight_example.rs
src/: client.rs  config.rs  flight.rs  lib.rs  prices.rs  tls.rs
tests/: client_test.rs  error_test.rs  flight_test.rs  models_test.rs  price_test.rs  readme_test.rs
